--- a/cap02/template.html
+++ b/cap02/template.html
@@ -10,13 +10,24 @@
   </style>
 </head>
 <body>
-  <h1>Script name</h1>
+  <h1>Script Name JS</h1>
   <hr>
   <section>
-
+    <p>Field 1</p>
+    <input type="text" name="input1" id="input1">
+    <p>Field 2</p>
+    <input type="text" name="input2" id="input2">
+    <br>
+    <br>
+    <button id="btn">Button</button>
+    <br>
+    <p id="output"></p>
   </section>
   <script>
-
+    const inName1 = document.querySelector('#input1')
+    const inName2 = document.querySelector('#input2')
+    const btn = document.querySelector('#btn')
+    const output = document.querySelector('#output')
   </script>
 </body>
 </html>
